[tool.poetry]
name = "loqusdbapi"
version = "0.1.0"
description = "A REST api to loqusdb"
authors = ["Måns Magnusson <mans.magnusson@scilifelab.se>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
pydantic = "^1.7.2"
uvicorn = "^0.12.2"
loqusdb = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
