[tool.poetry]
name = "loqusdbapi"
version = "0.1.1"
description = "A REST api to loqusdb"
authors = ["Måns Magnusson <mans.magnusson@scilifelab.se>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
pydantic = "^1.7.2"
uvicorn = {extras = ["standard"], version = "^0.12.0"}
loqusdb = "^2.5"
python-dotenv = "^0.19.1"
numpy = "1.19.4"
Cython = "0.29.24"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
